--- a/ImageNet.ipynb
+++ b/ImageNet.ipynb
@@ -1951,8 +1951,14 @@
      "output_type": "stream",
      "text": [
       "Loaded 5000 images from ImageNet!\n",
-      "extracting embeddings!\n",
-      "image idx 0, images: 32\n"
+      "extracting embeddings!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Extracting features:   3%|▎         | 4/157 [00:07<04:50,  1.90s/it]"
      ]
     }
    ],
@@ -1963,6 +1969,7 @@
     "import torchvision.models as models\n",
     "import os\n",
     "from PIL import Image\n",
+    "from tqdm import tqdm\n",
     "\n",
     "class CustomImageDataset(Dataset):\n",
     "    def __init__(self, root_dir, transform=None):\n",
@@ -2014,12 +2021,8 @@
     "# Compute embeddings\n",
     "def extract_features(dataloader, model):\n",
     "    embeddings = []\n",
-    "    num_img = 0\n",
     "    with torch.no_grad():\n",
-    "        for idx, images in enumerate(dataloader):\n",
-    "            num_img += len(images)\n",
-    "            if idx % 100 == 0:\n",
-    "                print(f'image idx {idx}, images: {num_img}')\n",
+    "        for idx, images in tqdm(enumerate(dataloader), desc=\"Extracting features\", total=len(dataloader)):\n",
     "            images = images.to(device)\n",
     "            features = model(images)\n",
     "            embeddings.append(features.cpu().numpy())\n",
