--- a/ImageNet.ipynb
+++ b/ImageNet.ipynb
@@ -1958,7 +1958,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting features:   3%|▎         | 4/157 [00:07<04:50,  1.90s/it]"
+      "Extracting features:   8%|▊         | 13/157 [00:24<04:34,  1.90s/it]"
      ]
     }
    ],
@@ -2029,7 +2029,7 @@
     "    return np.vstack(embeddings)  # Stack all embeddings\n",
     "\n",
     "print('extracting embeddings!')\n",
-    "embeddings = extract_features(imagenet_loader, model)\n"
+    "embeddings = extract_features(imagenet_loader, model)"
    ]
   },
   {
