--- a/ImageNet.ipynb
+++ b/ImageNet.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "id": "15cfd5b5-ef7d-4ed7-b168-5d76ac0ddc24",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\courn\\miniconda3\\envs\\tf\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from typing import List, Callable, Union, Dict, Any\n",
     "import random\n",
@@ -27,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "id": "41386d75",
    "metadata": {},
    "outputs": [],
@@ -141,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "id": "5374fcf3",
    "metadata": {},
    "outputs": [],
@@ -571,6 +580,7 @@
     "    \n",
     "    # Use random choice to sample rows\n",
     "    indices_p = torch.from_numpy(np.random.choice(n, size=(t), p=p_dist.cpu().numpy())).to(device)\n",
+    "    indices_p = indices_p.to(torch.long)\n",
     "    X1_t = X1[indices_p, :]\n",
     "    '''\n",
     "    Frieze '04\n",
@@ -583,6 +593,7 @@
     "    q_dist = (q / q.sum())\n",
     "    # Use random choice to sample rows\n",
     "    indices_q = torch.from_numpy(np.random.choice(m, size=(t), p=q_dist.cpu().numpy())).to(device)\n",
+    "    indices_q = indices_q.to(torch.long)\n",
     "    S_t = S[:, indices_q] # t x t\n",
     "    Q_t = torch.sqrt(q[indices_q]*t)\n",
     "    W = S_t[:, :] / Q_t[None, :]\n",
@@ -596,6 +607,7 @@
     "    '''\n",
     "    # Find V for the final return\n",
     "    indices = torch.from_numpy(np.random.choice(m, size=(t))).to(device)\n",
+    "    indices = indices.to(torch.long)\n",
     "    X2_t = X2[indices, :] # t x dim\n",
     "    D_t = torch.cdist(X1, X2_t) / np.sqrt(t) # n x t\n",
     "    Q = U_t.T @ U_t # r x r\n",
@@ -669,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "id": "cea693d9",
    "metadata": {},
    "outputs": [],
@@ -939,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "id": "b262e00a",
    "metadata": {},
    "outputs": [],
@@ -1413,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "id": "782c6457",
    "metadata": {},
    "outputs": [],
@@ -1896,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "id": "4183767f-2bc6-46db-afad-28df24da209f",
    "metadata": {},
    "outputs": [
@@ -1942,7 +1954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "id": "3e0c6726-c9f4-468c-a814-7d2f3d9c4c40",
    "metadata": {},
    "outputs": [
@@ -1958,7 +1970,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting features: 100%|██████████| 157/157 [04:16<00:00,  1.63s/it]\n"
+      "Extracting features: 100%|██████████| 157/157 [04:26<00:00,  1.70s/it]\n"
      ]
     }
    ],
@@ -2037,7 +2049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "id": "1eca2fc9-954e-4a85-8d97-b5b07391f596",
    "metadata": {},
    "outputs": [
@@ -2066,7 +2078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "id": "dc52a1a1-fd78-4c8a-a084-5b97d2fe468d",
    "metadata": {},
    "outputs": [
@@ -2091,7 +2103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "id": "96da85a1-2329-417e-a7ca-1cbce5a4cd09",
    "metadata": {},
    "outputs": [
@@ -2123,7 +2135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "id": "09b5469a-3ca0-4cf8-86e2-977d2b6d2c17",
    "metadata": {},
    "outputs": [
@@ -2151,7 +2163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "id": "1a938e94-841e-4f48-b341-3414e34335af",
    "metadata": {},
    "outputs": [
@@ -2170,7 +2182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "128e3693-3824-4b5c-990c-d5f1ddb8512f",
    "metadata": {},
    "outputs": [
@@ -2180,7 +2192,12 @@
      "text": [
       "Optimized rank-annealing schedule: [2, 1250]\n",
       "[2, 1250]\n",
-      "HROT-LR failed for sample size 2500: tensors used as indices must be long, byte or bool tensors\n"
+      "Iteration: 0\n",
+      "Iteration: 25\n",
+      "Iteration: 50\n",
+      "Last level, rank chunk-size 1250 with 2 iterations to completion.\n",
+      "0/2 of final-level iterations to completion\n",
+      "Iteration: 0\n"
      ]
     }
    ],
@@ -2215,12 +2232,12 @@
     "    cost_hrot_lr = hrot_lr.compute_OT_cost()\n",
     "    print(f'HR-OT cost: {cost_hrot_lr}')\n",
     "except Exception as e:\n",
-    "    print(f'HROT-LR failed for sample size {n}: {e}')\n"
+    "    print(f'HROT-LR failed for sample size {n}: {e}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 15,
    "id": "57d45171-518d-4627-b4ab-8cea117669cd",
    "metadata": {},
    "outputs": [
@@ -2231,7 +2248,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[53], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m n \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(\u001b[43mF\u001b[49m)\n\u001b[0;32m      2\u001b[0m mat \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros((n, \u001b[38;5;241m2\u001b[39m))\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k, (idx1, idx2) \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(F):\n",
+      "Cell \u001b[1;32mIn[15], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m n \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(\u001b[43mF\u001b[49m)\n\u001b[0;32m      2\u001b[0m mat \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros((n, \u001b[38;5;241m2\u001b[39m))\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k, (idx1, idx2) \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(F):\n",
       "\u001b[1;31mNameError\u001b[0m: name 'F' is not defined"
      ]
     }
